--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "perfect-scrollbar": "^1.5.5",
     "react": "18.2.0",
     "react-contenteditable": "^3.3.6",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.6",
