--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.0",
     "perfect-scrollbar": "^1.5.5",
     "react": "18.2.0",
+    "react-bubble-ui": "^1.1.2",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0"
