--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^1.0.0-beta.10",
     "emoji-mart": "^5.2.2",
     "next": "13.0.0",
+    "next-pwa": "^5.6.0",
     "perfect-scrollbar": "^1.5.5",
     "react": "18.2.0",
     "react-bubble-ui": "^1.1.2",
@@ -24,7 +25,7 @@
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.6",
+    "@types/node": "^18.11.7",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
