--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-bubble-ui": "^1.1.2",
     "react-contenteditable": "^3.3.6",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
