--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emoji-mart/react": "^1.0.1",
     "@nextui-org/react": "^1.0.0-beta.10",
     "emoji-mart": "^5.2.2",
+    "moment": "^2.29.4",
     "next": "13.0.0",
     "next-pwa": "^5.6.0",
     "perfect-scrollbar": "^1.5.5",
