--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "express": "^4.18.2",
+    "next-offline": "^5.0.5",
     "typescript": "4.8.4"
   }
 }
