--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
     "name": "IFTTT [for humans]",
     "short_name": "IFTTT",
     "start_url": "/IFTTT/",
+    "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
     "orientation": "portrait-primary",
