--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,22 +8,22 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "/IFTTT/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "/IFTTT/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/icon-384x384.png",
+            "src": "/IFTTT/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "/IFTTT/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
