--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-markdown-preview": "^4.1.4",
     "emoji-mart": "^5.2.2",
     "framer-motion": "^7.6.2",
+    "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
     "next": "13.0.0",
@@ -35,6 +36,7 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.187",
     "@types/node": "^18.11.7",
     "@types/react": "18.0.23",
     "@types/react-dom": "18.0.7",
